# sqlalchemy-wtforms

./: .gitignore  README.md  config.py  main.py  models.py  pyproject.toml
routes/: form.py  home.py
static/css/: style.css
templates/: base.html  form.html  home.html  sobre.html
